--- a/src/main/webapp/view/cidade-form.xhtml
+++ b/src/main/webapp/view/cidade-form.xhtml
@@ -10,7 +10,10 @@
 </h:head>
 
 <h:body>
-	<p>Ufd</p>
+      <h:form>
+			<p>Cidade</p>
+			<p:commandButton value="Voltar" action="#{cidadeBean.voltar()}"/>
+      </h:form>
 </h:body>
 
 </html>
