--- a/src/main/webapp/view/fiscalizacao-form.xhtml
+++ b/src/main/webapp/view/fiscalizacao-form.xhtml
@@ -10,8 +10,10 @@
 </h:head>
 
 <h:body>
-    <p:commandButton value="Voltar" action="#{guiSolicitacao.voltar()}" ajax="false" />
-	<p>Ufd</p>
+      <h:form>
+			<p>Fiscalizacao</p>
+			<p:commandButton value="Voltar" action="#{fiscalizacaoBean.voltar()}" />
+      </h:form>
 </h:body>
 
 </html>
