--- a/src/main/webapp/view/home.xhtml
+++ b/src/main/webapp/view/home.xhtml
@@ -11,7 +11,7 @@
 
 <h:body>
 	<h:form >
-		<p:commandButton value="UF" action="#{homeBean.openUf()}" process="@this"/>
+		<p:commandButton value="UF" action="#{homeBean.openUf()}"/>
 		<p:commandButton value="Cidade"   action="#{homeBean.openCidade()}"/>
 		<p:commandButton value="Bairro"   action="#{homeBean.openBairro()}"/>
 		<p:commandButton value="Empresa"   action="#{homeBean.openEmpresa()}"/>
