--- a/src/main/webapp/view/cidade-form.xhtml
+++ b/src/main/webapp/view/cidade-form.xhtml
@@ -1,19 +1,98 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	  xmlns:p="http://primefaces.org/ui"
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
 	<meta charset="UTF-8" />
-	<title>Projeto Web - Uf</title>
+	<title>Projeto Web - Cidade</title>
 	<link type="text/css" rel="stylesheet"	href="#{facesContext.externalContext.requestContextPath}/resources/css/estilo.css" />
 </h:head>
 
 <h:body>
-      <h:form>
-			<p>Cidade</p>
-			<p:commandButton value="Voltar" action="#{cidadeBean.voltar()}"/>
-      </h:form>
+
+	<h:form id="frmAcoes" >
+		<p:panel rendered="#{cidadeBean.mostraPesquisa}">
+			<p:commandButton value="Novo"
+							 actionListener="#{cidadeBean.solicitaIncluir()}"
+							 style="margin-top: 20px;"
+							 process="@form"
+							 update="@all"/>
+
+			<p:commandButton value="Alterar"
+							 actionListener="#{cidadeBean.solicitaAlterar()}"
+							 style="margin-top: 20px;"
+							 disabled="#{cidadeBean.desabilitaAlteracao}"
+							 process="@form"
+							 update="@all"/>
+
+			<p:commandButton value="Excluir"
+							 actionListener="#{cidadeBean.solicitaExcluir()}"
+							 style="margin-top: 20px;"
+							 disabled="#{cidadeBean.desabilitaExclusao}"
+							 process="@form"
+							 update="@all"/>
+		</p:panel>
+	</h:form>
+
+	<h:form id="frmDataGrid" >
+
+		<p:dataTable var="cidade" value="#{cidadeBean.cidades}"
+					 scrollable="true"
+					 scrollHeight="150"
+					 style="margin-top: 20px;"
+					 selectionMode="single"
+					 selection="#{cidadeBean.selected}"
+					 rowKey="#{cidade.id}"
+					 rendered="#{cidadeBean.mostraPesquisa}">
+
+			<p:ajax event="rowSelect" update=":frmAcoes" />
+
+			<p:column headerText="Nome">
+				<h:outputText value="#{cidade.nome}" />
+			</p:column>
+
+		</p:dataTable>
+
+		<p:commandButton value="Sair"
+						 rendered="#{cidadeBean.mostraPesquisa}"
+						 style="float: right; position: relative; margin-top: 20px;"
+						 action="home"
+						 process="@form"
+						 update="@form"/>
+	</h:form>
+
+
+	<h:form id="frmEdicao" >
+		<p:panelGrid columns="2" style="width: 100%;" rendered="#{cidadeBean.mostraEdicao}">
+			<p:outputLabel value="Nome: " for="nome" style="width: 200px;" />
+			<p:inputText id="nome" value="#{cidadeBean.cidade.nome}" />
+
+			<p:spacer />
+			<h:panelGroup>
+				<p:commandButton value="Confirmar"
+								 rendered="#{cidadeBean.incluindo}"
+								 id="btn-incluir"
+								 style="margin-top: 20px;"
+								 actionListener="#{cidadeBean.confirmaInclusao()}"
+								 process="@form"
+								 update="@all"/>
+				<p:commandButton value="ConfirmarE"
+								 rendered="#{cidadeBean.alterando}"
+								 id="btn-alterar"
+								 style="margin-top: 20px;"
+								 actionListener="#{cidadeBean.confirmaAlteracao()}"
+								 process="@form"
+								 update="@all"/>
+				<p:commandButton value="Cancelar"
+								 actionListener="#{cidadeBean.cancelar()}"
+								 id="btn-cancelar"
+								 style="margin-top: 20px;"
+								 process="@form"
+								 update="@all"/>
+			</h:panelGroup>
+		</p:panelGrid>
+	</h:form>
 </h:body>
 
 </html>
