--- a/src/main/webapp/view/cidade-form.xhtml
+++ b/src/main/webapp/view/cidade-form.xhtml
@@ -86,7 +86,7 @@
 								 actionListener="#{cidadeBean.confirmaInclusao()}"
 								 process="@form"
 								 update="@all"/>
-				<p:commandButton value="ConfirmarE"
+				<p:commandButton value="Alterar"
 								 rendered="#{cidadeBean.alterando}"
 								 id="btn-alterar"
 								 style="margin-top: 20px;"
