--- a/src/main/webapp/view/uf-form.xhtml
+++ b/src/main/webapp/view/uf-form.xhtml
@@ -84,7 +84,7 @@
 					actionListener="#{ufBean.confirmaInclusao()}"
 					process="@form" 
 					update="@all"/>
-				<p:commandButton value="ConfirmarE"
+				<p:commandButton value="Alterar"
 					rendered="#{ufBean.alterando}"
 					id="btn-alterar"
 					style="margin-top: 20px;"  
