--- a/src/main/webapp/view/bairro-form.xhtml
+++ b/src/main/webapp/view/bairro-form.xhtml
@@ -1,19 +1,112 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	  xmlns:p="http://primefaces.org/ui"
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
 	<meta charset="UTF-8" />
-	<title>Projeto Web - Uf</title>
+	<title>Projeto Web - Bairro</title>
 	<link type="text/css" rel="stylesheet"	href="#{facesContext.externalContext.requestContextPath}/resources/css/estilo.css" />
 </h:head>
 
 <h:body>
-      <h:form>
-			<p>Bairro</p>
-			<p:commandButton value="Voltar" action="#{bairroBean.voltar()}" />
-      </h:form>
+
+	<h:form id="frmAcoes" >
+		<p:panel rendered="#{bairroBean.mostraPesquisa}">
+			<p:commandButton value="Novo"
+							 actionListener="#{bairroBean.solicitaIncluir()}"
+							 style="margin-top: 20px;"
+							 process="@form"
+							 update="@all"/>
+
+			<p:commandButton value="Alterar"
+							 actionListener="#{bairroBean.solicitaAlterar()}"
+							 style="margin-top: 20px;"
+							 disabled="#{bairroBean.desabilitaAlteracao}"
+							 process="@form"
+							 update="@all"/>
+
+			<p:commandButton value="Excluir"
+							 actionListener="#{bairroBean.solicitaExcluir()}"
+							 style="margin-top: 20px;"
+							 disabled="#{bairroBean.desabilitaExclusao}"
+							 process="@form"
+							 update="@all"/>
+		</p:panel>
+	</h:form>
+
+	<h:form id="frmDataGrid" >
+
+		<p:dataTable var="bairro" value="#{bairroBean.bairros}"
+					 scrollable="true"
+					 scrollHeight="150"
+					 style="margin-top: 20px;"
+					 selectionMode="single"
+					 selection="#{bairroBean.selected}"
+					 rowKey="#{bairro.id}"
+					 rendered="#{bairroBean.mostraPesquisa}">
+
+			<p:ajax event="rowSelect" update=":frmAcoes" />
+
+			<p:column headerText="Bairro">
+				<h:outputText value="#{bairro.nome}" />
+			</p:column>
+
+			<p:column headerText="Cidade">
+				<h:outputText value="#{bairro.cidade.nome}" />
+			</p:column>
+
+			<p:column headerText="UF">
+				<h:outputText value="#{bairro.cidade.uf.sigla}" />
+			</p:column>
+
+
+		</p:dataTable>
+
+		<p:commandButton value="Sair"
+						 rendered="#{bairroBean.mostraPesquisa}"
+						 style="float: right; position: relative; margin-top: 20px;"
+						 action="home"
+						 process="@form"
+						 update="@form"/>
+	</h:form>
+
+
+	<h:form id="frmEdicao" >
+		<p:panelGrid columns="2" style="width: 100%;" rendered="#{bairroBean.mostraEdicao}">
+			<p:outputLabel value="Nome: " for="nome" style="width: 200px;" />
+			<p:inputText id="nome" value="#{bairroBean.bairro.nome}" />
+
+			<p:outputLabel for="cidade" value="Cidade:" />
+			<p:selectOneMenu id="cidade" value="#{bairroBean.bairro.cidade}" style="width:125px">
+				<f:selectItems value="#{cidadeBean.todos}" var="cidade" itemLabel="#{cidade.nome}" itemValue="#{cidade}" />
+			</p:selectOneMenu>
+
+			<p:spacer />
+			<h:panelGroup>
+				<p:commandButton value="Confirmar"
+								 rendered="#{bairroBean.incluindo}"
+								 id="btn-incluir"
+								 style="margin-top: 20px;"
+								 actionListener="#{bairroBean.confirmaInclusao()}"
+								 process="@form"
+								 update="@all"/>
+				<p:commandButton value="Alterar"
+								 rendered="#{bairroBean.alterando}"
+								 id="btn-alterar"
+								 style="margin-top: 20px;"
+								 actionListener="#{bairroBean.confirmaAlteracao()}"
+								 process="@form"
+								 update="@all"/>
+				<p:commandButton value="Cancelar"
+								 actionListener="#{bairroBean.cancelar()}"
+								 id="btn-cancelar"
+								 style="margin-top: 20px;"
+								 process="@form"
+								 update="@all"/>
+			</h:panelGroup>
+		</p:panelGrid>
+	</h:form>
 </h:body>
 
 </html>
