--- a/src/main/webapp/view/fiscalizacao-form.xhtml
+++ b/src/main/webapp/view/fiscalizacao-form.xhtml
@@ -1,19 +1,128 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+	  xmlns:p="http://primefaces.org/ui"
+	  xmlns:h="http://xmlns.jcp.org/jsf/html"
+	  xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
 	<meta charset="UTF-8" />
-	<title>Projeto Web - Uf</title>
+	<title>Projeto Web - Fiscalizacao</title>
 	<link type="text/css" rel="stylesheet"	href="#{facesContext.externalContext.requestContextPath}/resources/css/estilo.css" />
 </h:head>
 
 <h:body>
-      <h:form>
-			<p>Fiscalizacao</p>
-			<p:commandButton value="Voltar" action="#{fiscalizacaoBean.voltar()}" />
-      </h:form>
+
+	<h:form id="frmAcoes" >
+		<p:panel rendered="#{fiscalizacaoBean.mostraPesquisa}">
+			<p:commandButton value="Novo"
+							 actionListener="#{fiscalizacaoBean.solicitaIncluir()}"
+							 style="margin-top: 20px;"
+							 process="@form"
+							 update="@all"/>
+
+			<p:commandButton value="Alterar"
+							 actionListener="#{fiscalizacaoBean.solicitaAlterar()}"
+							 style="margin-top: 20px;"
+							 disabled="#{fiscalizacaoBean.desabilitaAlteracao}"
+							 process="@form"
+							 update="@all"/>
+
+			<p:commandButton value="Excluir"
+							 actionListener="#{fiscalizacaoBean.solicitaExcluir()}"
+							 style="margin-top: 20px;"
+							 disabled="#{fiscalizacaoBean.desabilitaExclusao}"
+							 process="@form"
+							 update="@all"/>
+		</p:panel>
+	</h:form>
+
+	<h:form id="frmDataGrid" >
+
+		<p:dataTable var="fiscalizacao" value="#{fiscalizacaoBean.fiscalizacaos}"
+					 scrollable="true"
+					 scrollHeight="150"
+					 style="margin-top: 20px;"
+					 selectionMode="single"
+					 selection="#{fiscalizacaoBean.selected}"
+					 rowKey="#{fiscalizacao.id}"
+					 rendered="#{fiscalizacaoBean.mostraPesquisa}">
+
+			<p:ajax event="rowSelect" update=":frmAcoes" />
+
+			<p:column headerText="Data">
+				<h:outputText value="#{fiscalizacao.data}" />
+			</p:column>
+
+			<p:column headerText="Razao Social">
+				<h:outputText value="#{fiscalizacao.empresa.razaoSocial}" />
+			</p:column>
+
+			<p:column headerText="CNPJ">
+				<h:outputText value="#{fiscalizacao.empresa.cnpj}" />
+			</p:column>
+
+			<p:column headerText="Cep">
+				<h:outputText value="#{fiscalizacao.empresa.cep}" />
+			</p:column>
+
+			<p:column headerText="Bairro">
+				<h:outputText value="#{fiscalizacao.empresa.bairro.nome}" />
+			</p:column>
+
+			<p:column headerText="Cidade">
+				<h:outputText value="#{fiscalizacao.empresa.bairro.cidade.nome}" />
+			</p:column>
+
+			<p:column headerText="Uf">
+				<h:outputText value="#{fiscalizacao.empresa.bairro.cidade.uf.sigla}" />
+			</p:column>
+
+
+		</p:dataTable>
+
+		<p:commandButton value="Sair"
+						 rendered="#{fiscalizacaoBean.mostraPesquisa}"
+						 style="float: right; position: relative; margin-top: 20px;"
+						 action="home"
+						 process="@form"
+						 update="@form"/>
+	</h:form>
+
+
+	<h:form id="frmEdicao" >
+		<p:panelGrid columns="2" style="width: 100%;" rendered="#{fiscalizacaoBean.mostraEdicao}">
+			<p:outputLabel for="Data" value="Data:" style="width: 200px;"/>
+			<p:calendar id="Data" pattern="dd/MM/yyyy" mask="true" converter="localDateConverter" value="#{fiscalizacaoBean.fiscalizacao.data}" />
+
+			<p:outputLabel for="Empresa" value="Empresa:" />
+			<p:selectOneMenu id="Empresa" value="#{fiscalizacaoBean.fiscalizacao.empresa}" style="width:125px">
+				<f:selectItems value="#{empresaBean.todos}" var="empresa" itemLabel="#{empresa.razaoSocial}" itemValue="#{empresa}" />
+			</p:selectOneMenu>
+
+			<p:spacer />
+			<h:panelGroup>
+				<p:commandButton value="Confirmar"
+								 rendered="#{fiscalizacaoBean.incluindo}"
+								 id="btn-incluir"
+								 style="margin-top: 20px;"
+								 actionListener="#{fiscalizacaoBean.confirmaInclusao()}"
+								 process="@form"
+								 update="@all"/>
+				<p:commandButton value="Alterar"
+								 rendered="#{fiscalizacaoBean.alterando}"
+								 id="btn-alterar"
+								 style="margin-top: 20px;"
+								 actionListener="#{fiscalizacaoBean.confirmaAlteracao()}"
+								 process="@form"
+								 update="@all"/>
+				<p:commandButton value="Cancelar"
+								 actionListener="#{fiscalizacaoBean.cancelar()}"
+								 id="btn-cancelar"
+								 style="margin-top: 20px;"
+								 process="@form"
+								 update="@all"/>
+			</h:panelGroup>
+		</p:panelGrid>
+	</h:form>
 </h:body>
 
 </html>
