--- a/src/main/webapp/view/uf-form.xhtml
+++ b/src/main/webapp/view/uf-form.xhtml
@@ -10,27 +10,42 @@
 </h:head>
 
 <h:body>
-	
-      <h:form id="frmAcoes" >
+
+	<h:form id="frmPesquisa" >
+		<p:panel style="width: 100%;" rendered="#{ufBean.mostraPesquisa}">
+			<p:outputLabel value="Nome: " for="nomePesquisa" style="width: 200px;" />
+			<p:inputText id="nomePesquisa" value="#{ufBean.nome}" />
+
+			<p:commandButton value="Pesquisar"
+							 style="float: right; position: relative;"
+							 actionListener="#{ufBean.pesquisar()}"
+							 process="@form"
+							 update=":frmDataGrid"/>
+		</p:panel>
+	</h:form>
+
+	<br/>
+
+	<h:form id="frmAcoes" >
 		<p:panel rendered="#{ufBean.mostraPesquisa}">
 			<p:commandButton value="Novo"
 				actionListener="#{ufBean.solicitaIncluir()}"
 				style="margin-top: 20px;"
-				process="@form" 
+				process="@form"
 				update="@all"/>
 			
 			<p:commandButton value="Alterar"
 				actionListener="#{ufBean.solicitaAlterar()}"
 				style="margin-top: 20px;"
 				disabled="#{ufBean.desabilitaAlteracao}"
-				process="@form" 
+				process="@form"
 				update="@all"/>
 			
 			<p:commandButton value="Excluir"
 				actionListener="#{ufBean.solicitaExcluir()}"
 				style="margin-top: 20px;"
 				disabled="#{ufBean.desabilitaExclusao}"
-				process="@form" 
+				process="@form"
 				update="@all"/>
 		</p:panel>
 	</h:form>		
@@ -39,7 +54,7 @@
 			
 		<p:dataTable var="uf" value="#{ufBean.ufs}" 
 			scrollable="true" 
-			scrollHeight="150" 
+			scrollHeight="300"
 			style="margin-top: 20px;"
 			selectionMode="single" 
 			selection="#{ufBean.selected}" 
