--- a/src/main/webapp/view/empresa-form.xhtml
+++ b/src/main/webapp/view/empresa-form.xhtml
@@ -100,6 +100,10 @@
 
 
 	<h:form id="frmEdicao" >
+		<p:messages id="messages" showDetail="true" closable="true">
+			<p:autoUpdate />
+		</p:messages>
+
 		<p:panelGrid columns="2" style="width: 100%;" rendered="#{empresaBean.mostraEdicao}">
 			<p:outputLabel value="Razao Social: " for="RazaoSocial" style="width: 200px;" />
 			<p:inputText id="RazaoSocial" value="#{empresaBean.empresa.razaoSocial}" />
