--- a/src/main/webapp/view/home.xhtml
+++ b/src/main/webapp/view/home.xhtml
@@ -15,6 +15,7 @@
 		<p:commandButton value="Cidade" action="cidade-form" process="@form" update="@form"/>
 		<p:commandButton value="Bairro"  action="bairro-form" process="@form" update="@form"/>
 		<p:commandButton value="Empresa" action="empresa-form" process="@form" update="@form"/>
+		<p:commandButton value="Fiscal" action="fiscal-form" process="@form" update="@form"/>
 		<p:commandButton value="Fiscalizacao" action="fiscalizacao-form" process="@form" update="@form"/>
 	</h:form>
 </h:body>
