--- a/src/main/webapp/view/cidade-form.xhtml
+++ b/src/main/webapp/view/cidade-form.xhtml
@@ -6,7 +6,6 @@
 <h:head>
 	<meta charset="UTF-8" />
 	<title>Projeto Web - Cidade</title>
-	<link type="text/css" rel="stylesheet"	href="#{facesContext.externalContext.requestContextPath}/resources/css/estilo.css" />
 </h:head>
 
 <h:body>
@@ -84,13 +83,13 @@
 
 	<h:form id="frmEdicao" >
 		<p:panelGrid columns="2" style="width: 100%;" rendered="#{cidadeBean.mostraEdicao}">
-			<p:outputLabel value="Nome: " for="nome" style="width: 200px;" />
-			<p:inputText id="nome" value="#{cidadeBean.cidade.nome}" />
-
 			<p:outputLabel for="uf" value="UF:" />
 			<p:selectOneMenu id="uf" value="#{cidadeBean.cidade.uf}" style="width:125px">
 				<f:selectItems value="#{ufBean.todos}" var="uf" itemLabel="#{uf.sigla}" itemValue="#{uf}" />
 			</p:selectOneMenu>
+
+			<p:outputLabel value="Cidade: " for="nome" style="width: 200px;" />
+			<p:inputText id="nome" value="#{cidadeBean.cidade.nome}" />
 
 			<p:spacer />
 			<h:panelGroup>
@@ -99,6 +98,7 @@
 								 id="btn-incluir"
 								 style="margin-top: 20px;"
 								 actionListener="#{cidadeBean.confirmaInclusao()}"
+								 oncomplete="changePasswordDlgVar.show()"
 								 process="@form"
 								 update="@all"/>
 				<p:commandButton value="Alterar"
