--- a/src/main/webapp/view/cidade-form.xhtml
+++ b/src/main/webapp/view/cidade-form.xhtml
@@ -12,7 +12,7 @@
 
 	<h:form id="frmPesquisa" >
 		<p:panel style="width: 100%;" rendered="#{cidadeBean.mostraPesquisa}">
-			<p:outputLabel value="Nome: " for="nomePesquisa" style="width: 200px;" />
+			<p:outputLabel value="Cidade: " for="nomePesquisa" style="width: 200px;" />
 			<p:inputText id="nomePesquisa" value="#{cidadeBean.nome}" />
 
 			<p:commandButton value="Pesquisar"
@@ -62,7 +62,7 @@
 
 			<p:ajax event="rowSelect" update=":frmAcoes" />
 
-			<p:column headerText="Nome">
+			<p:column headerText="Cidade">
 				<h:outputText value="#{cidade.nome}" />
 			</p:column>
 
